--- a/index.html
+++ b/index.html
@@ -1,74 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title></title>
-    <style>
-      body {
-        background-color: #f3f3f3;
-        color: #333333;
-        font-family: Century Gothic, sans-serif;
-        margin-left: auto;
-        margin-right: auto;
-
-        width: 600px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      .customViewer {
-        border-color: #fa5b35;
-        border-width: 1px;
-        border-style: solid;
-      }
-
-      .customViewer > canvas {
-        width: 100%;
-      }
-      .customPrevBtn {
-        cursor: pointer;
-        display: inline-block;
-        margin: 0;
-        width: 48px;
-        color: #fa5b35;
-        background-color: #f3f3f3;
-        border-color: #fa5b35;
-        border-width: 1px;
-        border-style: solid;
-        border-radius: 6px;
-      }
-
-      .customNextBtn {
-        cursor: pointer;
-        display: inline-block;
-        margin: 0;
-        width: 48px;
-        color: #fa5b35;
-        background-color: #f3f3f3;
-        border-color: #333333;
-        border-width: 1px;
-        border-style: solid;
-        border-radius: 6px;
-      }
-
-      .customPages {
-        display: inline-block;
-        width: calc(100% - 2 * 50px);
-      }
-
-      .customWrapper {
-        height: 40px;
-        font-size: 24px;
-        padding: 12px;
-        padding-bottom: 0;
-        background-color: #fff;
-      }
-
-    </style>
-  </head>
-  <body>
-    <div id="App"></div>
-    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>Mgr-pdf-viewer-react</title><link href="/static/css/main.bce7fd51.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.1378e8ac.js"></script></body></html>
